--- a/index.html
+++ b/index.html
@@ -6,14 +6,57 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>此木創遊 The Wood Games</title>
-  
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
-<img src="images/Page.png" alt="此木創遊 The Wood Games">
-
+  <div id="main">
+    <div class="logo">
+      <a href="index.html">
+        <img src="images/logo.png" alt="logo">
+      </a>
+    </div>
+    <div class="menu">
+      <div class="child">
+        <span>介紹</span>
+        <span class="en">About</span>
+      </div>
+      <div class="child">
+        <span>遊戲</span>
+        <span class="en">Products</span>
+      </div>
+      <div class="child">
+        <span>商店</span>
+        <span class="en">Shop</span>
+      </div>
+    </div>
+    <div class="banner">
+      <div class="img1"></div>
+    </div>
+    <div class="content">
+      <p>我們出版美麗又好玩的遊戲！</p>
+      <p>We publish beautiful and extraordinary games!</p>
+      <p>Wir veröffentlichen hübsche und gute Spiele!</p>
+    </div>
+  </div>
+  <div id="footer">
+   <div class="content">
+      <div class="left">
+        <ul>
+          <li><a href="">Facebook</a></li>
+          <li><a href="">Twitter</a></li>
+          <li><a href="">Instagram</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </div>
+      <div class="right">
+        © 2017 此木創遊 The Wood Games
+      </div>
+    </div>
+  </div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
 </html>
