--- a/tpl.html
+++ b/tpl.html
@@ -8,6 +8,7 @@
   <title>Page Title</title>
   
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
