--- a/index.html
+++ b/index.html
@@ -19,15 +19,25 @@
       </a>
     </div>
     <div class="menu">
-      <div class="child">
+      <div class="item">
         <span>介紹</span>
         <span class="en">About</span>
       </div>
-      <div class="child">
+      <div class="item">
         <span>遊戲</span>
         <span class="en">Products</span>
+          <div class="child_parent">
+            <a href="index.html" class="child">
+              <p>萬貓的慶典</p>
+              <p class="en">Festival of Thousand Cats</p>
+            </a>
+             <a href="index.html" class="child">
+              <p>萬貓的慶典</p>
+              <p class="en">Festival of Thousand Cats</p>
+            </a>
+          </div>
       </div>
-      <div class="child">
+      <div class="item">
         <span>商店</span>
         <span class="en">Shop</span>
       </div>
