--- a/index.html
+++ b/index.html
@@ -31,10 +31,6 @@
               <p>萬貓的慶典</p>
               <p class="en">Festival of Thousand Cats</p>
             </a>
-             <a href="index.html" class="child">
-              <p>萬貓的慶典</p>
-              <p class="en">Festival of Thousand Cats</p>
-            </a>
           </div>
       </div>
       <div class="item">
@@ -55,7 +51,7 @@
    <div class="content">
       <div class="left">
         <ul>
-          <li><a href="">Facebook</a></li>
+          <li><a href="https://www.facebook.com/dasholzspiele">Facebook</a></li>
           <li><a href="">Twitter</a></li>
           <li><a href="">Instagram</a></li>
           <li><a href="">Contact</a></li>
