--- a/about.html
+++ b/about.html
@@ -11,6 +11,15 @@
 </head>
 
 <body>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v2.8&appId=621737861254891";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+ 
   <div id="main">
     <div class="logo">
       <a href="index.html">
@@ -41,18 +50,31 @@
         </div>
       </a>
     </div>
-    <div class="banner">
-      <div class="img1"></div>
+    <div class="content">
+      <div class="left">
+        <img class="logo_img" src="images/logo_img.png" alt="">
+        <div class="block">
+          <h1>我們出版美麗又好玩的遊戲！</h1>
+          <h2>We publish beautiful and extraordinary games!</h2>
+          <h2>Wir bringen tolle und schöne Spiele heraus!</h2>
+        </div>
+        <div class="block">
+          <h1>BGG頁面 </h1>
+          <h2><a href="https://boardgamegeek.com/boardgame/199086/festival-thousand-cats" target="_blank">BoardGameGeek Page</a></h2>
+        </div>
+        <div class="block">
+          <h1>歡迎連絡我們 Contact：</h1>
+          <h2><a href="mailto:dasholzspiele@gmail.com">dasholzspiele@gmail.com</a>
+          </h2>
+        </div>
+      </div>
+      <div class="right">
+        <div class="fb-page" data-href="https://www.facebook.com/dasholzspiele" data-tabs="timeline" data-width="300" data-height="300" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/dasholzspiele" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/dasholzspiele">此木創遊 The Wood Games</a></blockquote></div>
+      </div>
     </div>
-<!--
-     第二張banner的放法
-    <div class="banner">
-      <div class="img1"></div>
-    </div>
--->
   </div>
   <div id="footer">
-   <div class="content">
+    <div class="content clearfix">
       <div class="left">
         <ul>
           <li><a href="https://www.facebook.com/dasholzspiele">Facebook</a></li>
