移除超連結

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="right">
-        <div class="fb-page" data-href="https://www.facebook.com/dasholzspiele" data-tabs="timeline" data-width="300" data-height="300" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/dasholzspiele" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/dasholzspiele">此木創遊 The Wood Games</a></blockquote></div>
+        <div class="fb-page" data-href="https://www.facebook.com/dasholzspiele" data-tabs="timeline" data-width="300" data-height="300" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/dasholzspiele" class="fb-xfbml-parse-ignore"></blockquote></div>
       </div>
     </div>
   </div>
