--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <div class="img1"></div>
     </div>
 -->
+    <div class="content"></div>
   </div>
   <div id="footer">
    <div class="content">
