--- a/about.html
+++ b/about.html
@@ -10,6 +10,13 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
+<script>
+if (location.protocol != 'https:'){
+	if(window.location.hostname!="localhost" && window.location.hostname!="127.0.0.1" ){
+			location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
+	}
+}
+</script>
 <body>
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -60,7 +67,7 @@
         </div>
         <div class="block">
           <h1>BGG頁面 </h1>
-          <h2><a href="https://boardgamegeek.com/boardgame/199086/festival-thousand-cats" target="_blank">BoardGameGeek Page</a></h2>
+          <h2><a href="https://boardgamegeek.com/boardgamepublisher/35831/wood-games" target="_blank">BoardGameGeek Page</a></h2>
         </div>
         <div class="block">
           <h1>歡迎連絡我們 Contact：</h1>
@@ -77,10 +84,10 @@
     <div class="content clearfix">
       <div class="left">
         <ul>
-          <li><a href="https://www.facebook.com/dasholzspiele">Facebook</a></li>
-          <li><a href="">Twitter</a></li>
-          <li><a href="">Instagram</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="https://www.facebook.com/dasholzspiele" target="_blank">Facebook</a></li>
+          <li><a href="https://twitter.com/dasholzspiele" target="_blank">Twitter</a></li>
+          <li><a href="https://www.instagram.com/thewoodgames/" target="_blank">Instagram</a></li>
+          <li><a href="mailto:dasholzspiele@gmail.com">Contact</a></li>
         </ul>
       </div>
       <div class="right">
