--- a/shop.html
+++ b/shop.html
@@ -10,6 +10,13 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
+<script>
+if (location.protocol != 'https:'){
+	if(window.location.hostname!="localhost" && window.location.hostname!="127.0.0.1" ){
+			location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
+	}
+}
+</script>
 <body>
   <div id="main">
     <div class="logo">
@@ -47,10 +54,10 @@
    <div class="content">
       <div class="left">
         <ul>
-          <li><a href="https://www.facebook.com/dasholzspiele">Facebook</a></li>
-          <li><a href="">Twitter</a></li>
-          <li><a href="">Instagram</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="https://www.facebook.com/dasholzspiele" target="_blank">Facebook</a></li>
+          <li><a href="https://twitter.com/dasholzspiele" target="_blank">Twitter</a></li>
+          <li><a href="https://www.instagram.com/thewoodgames/" target="_blank">Instagram</a></li>
+          <li><a href="mailto:dasholzspiele@gmail.com">Contact</a></li>
         </ul>
       </div>
       <div class="right">
