--- a/about.html
+++ b/about.html
@@ -10,13 +10,6 @@
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
-<script>
-if (location.protocol != 'https:'){
-	if(window.location.hostname!="localhost" && window.location.hostname!="127.0.0.1" ){
-			location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
-	}
-}
-</script>
 <body>
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -42,9 +35,9 @@ if (location.protocol != 'https:'){
       </a>
       <div class="item">
         <span>遊戲</span>
-        <span class="en">Products</span>
+        <span class="en">Games</span>
         <div class="child_parent">
-          <a href="index.html" class="child">
+          <a href="product.html" class="child">
             <p>萬貓的慶典</p>
             <p class="en">Festival of Thousand Cats</p>
           </a>
