--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </a>
     </div>
     <div class="banner">
-      <div class="img1"></div>
+      <a href="product.html"><div class="img1"></div></a>
     </div>
 <!--
      第二張banner的放法
