--- a/about.html
+++ b/about.html
@@ -47,6 +47,10 @@ if (location.protocol != 'https:'){
             <p>萬貓的慶典</p>
             <p class="en">Festival of Thousand Cats</p>
           </a>
+          <a href="product2.html" class="child">
+            <p>福爾摩斯大對決</p>
+            <p class="en">Holmes : Sherlock & Mycroft</p>
+          </a>
         </div>
       </div>
       <a href="shop.html">
