--- a/product.html
+++ b/product.html
@@ -38,6 +38,10 @@ if (location.protocol != 'https:'){
             <p>萬貓的慶典</p>
             <p class="en">Festival of Thousand Cats</p>
           </a>
+          <a href="product2.html" class="child">
+            <p>福爾摩斯大對決</p>
+            <p class="en">Holmes : Sherlock & Mycroft</p>
+          </a>
         </div>
       </div>
       <a href="shop.html">
@@ -47,7 +51,6 @@ if (location.protocol != 'https:'){
         </div>
       </a>
     </div>
-    
       <div class="product_content" style="margin-bottom: 50px;">
       <div class="left">
         <div class="img_show" style="background-image: url(../images/C0.jpg);"></div>
