--- a/shop.html
+++ b/shop.html
@@ -38,6 +38,10 @@ if (location.protocol != 'https:'){
             <p>萬貓的慶典</p>
             <p class="en">Festival of Thousand Cats</p>
           </a>
+          <a href="product2.html" class="child">
+            <p>福爾摩斯大對決</p>
+            <p class="en">Holmes : Sherlock & Mycroft</p>
+          </a>
         </div>
       </div>
       <a href="shop.html">
@@ -48,7 +52,104 @@ if (location.protocol != 'https:'){
       </a>
     </div>
     <div style="margin-bottom:50px">
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSedBYHaT2Gcb1Lw0bVbgxVqaqW8Z8ojcjtvZwHo-c25L35msQ/viewform?c=0&w=1" width="100%" height="2850px" frameborder="0" scrolling="no"></iframe>
+       <div style="margin-top: -15px;margin-bottom: 25px;line-height: 19px; color: #58595B;font-size: 15px;">歡迎來到此木創遊網路商店！在這裡您可以找到我們嚴選的出版品，預購期間享有優惠，敬請把握機會！本次商店為慶祝《福爾摩斯大對決》上市，優惠期間為9/16-10/6，優惠期間享免運優惠。選定您喜歡的方案，點選右側「立即購買」按鈕結帳，對結帳程序有問題可以來信詢問：dasholzspiele@gmail.com</div>
+       <div style="border: 1px solid #827B00;padding: 11px;">
+         <div style="width: 195px;display: inline-block">
+           <img src="images/5.png">
+         </div>
+         <div style="width: 332px;display: inline-block;vertical-align: top;margin-left: 13px;margin-top: 5px;">
+           <div style="font-size: 22px;line-height: 25px;">福爾摩斯大對決<br>Holmes: Sherlock & Mycroft</div>
+           <div style="font-size: 15px;color: #827B00;margin-top: 110px;">建議售價690</div>
+         </div>
+         <div style="width: 316px;display: inline-block;vertical-align: top; margin-top: 5px;">
+             <div style="border-bottom: 2px solid #827B00;padding-bottom: 5px;margin-bottom: 13px;">商品說明</div>
+             <div style="clear: both; margin-bottom: 10px; height: 64px;">
+               <div style="float: left; vertical-align: top;">
+                 <div style="color: #827B00; font-size: 17px;margin-bottom:13px;">一套方案 / 特價 $590</div>
+                 <div style="font-size: 14px; margin-bottom: 3px;">1 套主遊戲</div>
+                 <div style="font-size: 14px; margin-bottom: 5px;">1 張預購贈品米寶貼</div>
+               </div>
+               <div style="float: right; vertical-align: top; ">
+                 <a href="https://core.spgateway.com/EPG/thewoodgames/360XDJ" target="_blank" class="product_a">立即購買</a>
+               </div>
+             </div>
+             <div style="clear: both; margin-bottom: 10px;">
+               <div style="float: left; vertical-align: top;">
+                 <div style="color: #827B00; font-size: 17px;margin-bottom:13px;">五套方案 / 特價 $2600</div>
+                 <div style="font-size: 14px; margin-bottom: 3px;">5 套主遊戲</div>
+                 <div style="font-size: 14px; margin-bottom: 5px;">5 張預購贈品米寶貼</div>
+               </div>
+               <div style="float: right; vertical-align: top; ">
+                 <a href="https://core.spgateway.com/EPG/thewoodgames/1mjCn7" target="_blank" class="product_a">立即購買</a>
+               </div>
+             </div>
+         </div>
+       </div>
+       <div style="border: 1px solid #827B00;border-top: none; padding: 11px;">
+         <div style="width: 195px;display: inline-block">
+           <img src="images/6.png">
+         </div>
+         <div style="width: 332px;display: inline-block;vertical-align: top;margin-left: 13px;margin-top: 5px;">
+           <div style="font-size: 22px;line-height: 25px;">萬貓的慶典<br>Festival of Thousand Cats</div>
+           <div style="font-size: 15px;color: #827B00;margin-top: 110px;">建議售價820</div>
+         </div>
+         <div style="width: 316px;display: inline-block;vertical-align: top; margin-top: 5px;">
+             <div style="border-bottom: 2px solid #827B00;padding-bottom: 5px;margin-bottom: 13px;">商品說明</div>
+             <div style="clear: both; margin-bottom: 10px; height: 64px;">
+               <div style="float: left; vertical-align: top;">
+                 <div style="color: #827B00; font-size: 17px;margin-bottom:13px;">基本遊戲 / $特價 $780</div>
+                 <div style="font-size: 14px; margin-bottom: 3px;">1 套主遊戲</div>
+                 <div style="font-size: 14px; margin-bottom: 5px;">1 個貓咪紙板立牌</div>
+               </div>
+               <div style="float: right; vertical-align: top; ">
+                 <a href="https://core.spgateway.com/EPG/thewoodgames/P34qec" target="_blank" class="product_a">立即購買</a>
+               </div>
+             </div>
+             <div style="clear: both; margin-bottom: 10px;">
+               <div style="float: left; vertical-align: top;">
+                 <div style="color: #827B00; font-size: 17px;margin-bottom:13px;">酒杯擴充 / $100</div>
+                 <div style="font-size: 14px; margin-bottom: 3px;">1 份酒杯擴充牌</div>
+                 <div style="font-size: 14px; margin-bottom: 5px;">(須搭配主遊戲)</div>
+               </div>
+               <div style="float: right; vertical-align: top; ">
+                 <a href="https://core.spgateway.com/EPG/thewoodgames/pFo7C5" target="_blank" class="product_a">立即購買</a>
+               </div>
+             </div>
+         </div>
+       </div>
+       <div style="border: 1px solid #827B00;border-top: none; padding: 11px;">
+         <div style="width: 195px;display: inline-block">
+           <img src="images/7.png">
+         </div>
+         <div style="width: 332px;display: inline-block;vertical-align: top;margin-left: 13px;margin-top: 5px;">
+           <div style="font-size: 22px;line-height: 25px;">萬貓的慶典 + 福爾摩斯大對決</div>
+           <div style="font-size: 15px;color: #827B00;margin-top: 135px;">建議售價1510</div>
+         </div>
+         <div style="width: 316px;display: inline-block;vertical-align: top; margin-top: 5px;">
+             <div style="border-bottom: 2px solid #827B00;padding-bottom: 5px;margin-bottom: 13px;">商品說明</div>
+             <div style="clear: both; margin-bottom: 10px; height: 64px;">
+               <div style="float: left; vertical-align: top;">
+                 <div style="color: #827B00; font-size: 17px;margin-bottom:13px;">同捆方案 / 特價 $1280</div>
+                 <div style="font-size: 14px; margin-bottom: 3px;  line-height: 17px;">
+                    1 套《福爾摩斯大對決》主遊戲
+                    <br>
+                    1 套《萬貓的慶典》主遊戲
+                    <br>
+                    1 張預購贈品米寶貼
+                    <br>
+                    1 個貓咪紙板立牌
+                    <br>
+                    1 份酒杯擴充牌
+                    <br>
+                    (須搭配主遊戲)
+                 </div>
+               </div>
+               <div style="float: right; vertical-align: top; ">
+                 <a href="https://core.spgateway.com/EPG/thewoodgames/hGVeO3" target="_blank" class="product_a">立即購買</a>
+               </div>
+             </div>
+         </div>
+       </div>
     </div>
   </div>
   <div id="footer">
