--- a/product2.html
+++ b/product2.html
@@ -7,7 +7,7 @@
   <title>此木創遊 The Wood Games</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/reset.css">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css?id=2">
 </head>
 <script>
 if (location.protocol != 'https:'){
