--- a/shop.html
+++ b/shop.html
@@ -7,7 +7,7 @@
   <title>此木創遊 The Wood Games</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/reset.css">
-  <link rel="stylesheet" type="text/css" href="css/main.css?id=2">
+  <link rel="stylesheet" type="text/css" href="css/main.css?id=3">
 </head>
 <script>
 if (location.protocol != 'https:'){
@@ -52,17 +52,17 @@ if (location.protocol != 'https:'){
       </a>
     </div>
     <div style="margin-bottom:50px">
-       <div style="margin-top: -15px;margin-bottom: 25px;line-height: 19px; color: #58595B;font-size: 15px;">歡迎來到此木創遊網路商店！在這裡您可以找到我們嚴選的出版品，預購期間享有優惠，敬請把握機會！本次商店為慶祝《福爾摩斯大對決》上市，優惠期間為9/16-10/6，優惠期間享免運優惠。選定您喜歡的方案，點選右側「立即購買」按鈕結帳，對結帳程序有問題可以來信詢問：dasholzspiele@gmail.com</div>
+       <div style="margin-top: -15px;margin-bottom: 25px;line-height: 20px; color: #58595B;font-size: 15px; letter-spacing: 1.5px;">歡迎來到此木創遊網路商店！在這裡您可以找到我們嚴選的出版品，預購期間享有優惠，敬請把握機會！本次商店為慶祝《福爾摩斯大對決》上市，優惠期間為9/16-10/6，優惠期間享免運優惠。選定您喜歡的方案，點選右側「立即購買」按鈕結帳，對結帳程序有問題可以來信詢問：dasholzspiele@gmail.com</div>
        <div style="border: 1px solid #827B00;padding: 11px;">
          <div style="width: 195px;display: inline-block">
            <img src="images/5.png">
          </div>
          <div style="width: 332px;display: inline-block;vertical-align: top;margin-left: 13px;margin-top: 5px;">
            <div style="font-size: 22px;line-height: 25px;">福爾摩斯大對決<br>Holmes: Sherlock & Mycroft</div>
-           <div style="font-size: 15px;color: #827B00;margin-top: 110px;">建議售價690</div>
+           <div style="font-size: 16px;color: #827B00;margin-top: 110px;">建議售價 690</div>
          </div>
          <div style="width: 316px;display: inline-block;vertical-align: top; margin-top: 5px;">
-             <div style="border-bottom: 2px solid #827B00;padding-bottom: 5px;margin-bottom: 13px;">商品說明</div>
+             <div style="border-bottom: 1px solid #827B00;padding-bottom: 7px;margin-bottom: 13px;">商品說明</div>
              <div style="clear: both; margin-bottom: 10px; height: 64px;">
                <div style="float: left; vertical-align: top;">
                  <div style="color: #827B00; font-size: 17px;margin-bottom:13px;">一套方案 / 特價 $590</div>
@@ -91,10 +91,10 @@ if (location.protocol != 'https:'){
          </div>
          <div style="width: 332px;display: inline-block;vertical-align: top;margin-left: 13px;margin-top: 5px;">
            <div style="font-size: 22px;line-height: 25px;">萬貓的慶典<br>Festival of Thousand Cats</div>
-           <div style="font-size: 15px;color: #827B00;margin-top: 110px;">建議售價820</div>
+           <div style="font-size: 16px;color: #827B00;margin-top: 110px;">建議售價 820</div>
          </div>
          <div style="width: 316px;display: inline-block;vertical-align: top; margin-top: 5px;">
-             <div style="border-bottom: 2px solid #827B00;padding-bottom: 5px;margin-bottom: 13px;">商品說明</div>
+             <div style="border-bottom: 1px solid #827B00;padding-bottom: 7px;margin-bottom: 13px;">商品說明</div>
              <div style="clear: both; margin-bottom: 10px; height: 64px;">
                <div style="float: left; vertical-align: top;">
                  <div style="color: #827B00; font-size: 17px;margin-bottom:13px;">基本遊戲 / $特價 $780</div>
@@ -123,10 +123,10 @@ if (location.protocol != 'https:'){
          </div>
          <div style="width: 332px;display: inline-block;vertical-align: top;margin-left: 13px;margin-top: 5px;">
            <div style="font-size: 22px;line-height: 25px;">萬貓的慶典 + 福爾摩斯大對決</div>
-           <div style="font-size: 15px;color: #827B00;margin-top: 135px;">建議售價1510</div>
+           <div style="font-size: 16px;color: #827B00;margin-top: 135px;">建議售價 1510</div>
          </div>
          <div style="width: 316px;display: inline-block;vertical-align: top; margin-top: 5px;">
-             <div style="border-bottom: 2px solid #827B00;padding-bottom: 5px;margin-bottom: 13px;">商品說明</div>
+             <div style="border-bottom: 1px solid #827B00;padding-bottom: 7px;margin-bottom: 13px;">商品說明</div>
              <div style="clear: both; margin-bottom: 10px; height: 64px;">
                <div style="float: left; vertical-align: top;">
                  <div style="color: #827B00; font-size: 17px;margin-bottom:13px;">同捆方案 / 特價 $1280</div>
