--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>此木創遊 The Wood Games</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/reset.css">
-  <link rel="stylesheet" type="text/css" href="css/main.css?id=3">
+  <link rel="stylesheet" type="text/css" href="css/main.css?id=4">
 </head>
 <script>
 if (location.protocol != 'https:'){
@@ -52,14 +52,11 @@ if (location.protocol != 'https:'){
       </a>
     </div>
     <div class="banner">
-      <a href="product.html"><div class="img1"></div></a>
+      <a href="product2.html"><img style="width: 100%" src="images/0.5.png" alt=""></a>
     </div>
-<!--
-     第二張banner的放法
     <div class="banner">
-      <div class="img1"></div>
+      <a href="product.html"><img style="width: 100%" src="images/DM.jpg" alt=""></a>
     </div>
--->
     <div class="content"></div>
   </div>
   <div id="footer">
