--- a/shop.html
+++ b/shop.html
@@ -7,7 +7,7 @@
   <title>此木創遊 The Wood Games</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/reset.css">
-  <link rel="stylesheet" type="text/css" href="css/main.css?id=3">
+  <link rel="stylesheet" type="text/css" href="css/main.css?id=4">
 </head>
 <script>
 if (location.protocol != 'https:'){
@@ -70,7 +70,7 @@ if (location.protocol != 'https:'){
                  <div style="font-size: 14px; margin-bottom: 5px;">1 張預購贈品米寶貼</div>
                </div>
                <div style="float: right; vertical-align: top; ">
-                 <a href="https://core.spgateway.com/EPG/thewoodgames/360XDJ" target="_blank" class="product_a">立即購買</a>
+                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSeZFLVRpnmyD4qotUqmiN67rDCRDuhJRcVqcZ2esvi6-Cn-cQ/viewform" target="_blank" class="product_a">立即購買</a>
                </div>
              </div>
              <div style="clear: both; margin-bottom: 10px;">
@@ -80,7 +80,7 @@ if (location.protocol != 'https:'){
                  <div style="font-size: 14px; margin-bottom: 5px;">5 張預購贈品米寶貼</div>
                </div>
                <div style="float: right; vertical-align: top; ">
-                 <a href="https://core.spgateway.com/EPG/thewoodgames/1mjCn7" target="_blank" class="product_a">立即購買</a>
+                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSeZFLVRpnmyD4qotUqmiN67rDCRDuhJRcVqcZ2esvi6-Cn-cQ/viewform" target="_blank" class="product_a">立即購買</a>
                </div>
              </div>
          </div>
@@ -145,7 +145,7 @@ if (location.protocol != 'https:'){
                  </div>
                </div>
                <div style="float: right; vertical-align: top; ">
-                 <a href="https://core.spgateway.com/EPG/thewoodgames/hGVeO3" target="_blank" class="product_a">立即購買</a>
+                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSeZFLVRpnmyD4qotUqmiN67rDCRDuhJRcVqcZ2esvi6-Cn-cQ/viewform" target="_blank" class="product_a">立即購買</a>
                </div>
              </div>
          </div>
