--- a/product2.html
+++ b/product2.html
@@ -123,8 +123,10 @@ Is Chapman an unfortunate young man that fell in the wrong company or a member o
         </div>
 
       </div>
-      <div>
-        尚無規則下載
+         <div>
+          <a href="https://boardgamegeek.com/filepage/152435/holmes-sherlock-mycroft-chinese-rules" target="_blank">《福爾摩斯大對決》 中文規則書下載 </a>
+           <br>
+          <a href="https://boardgamegeek.com/filepage/144609/holmes-sherlock-mycroft-english-rules" target="_blank">Holmes: Sherlock & Mycroft English Rulebook Download</a> 
         </div>
       <div>尚無相關評論</div>
     </div>
